package edu.fiuba.algo3.modelo.Ataque;

public interface DanioUnidad {

    public abstract Danio danioTerrestre();

    public abstract Danio danioAereo();
}
