@startuml
'https://plantuml.com/class-diagram

class Ataque {
    + Ataque(unDanio : Danio)
    + Ataque(unDanioUnidad: DanioUnidad)
    + aplicarAtaque(cantidadVida : int) : int
    + ataqueTerrestre() : Ataque
    + ataqueAereo() : Ataque
}

class Danio {
    - danio : int

    + Danio(danio : int)
    + aplicarDanio(cantidadVida : int) : int

}

interface DanioUnidad {
    + danioTerrestre() : Danio
    + danioAereo() : Danio
}



Ataque --> Danio
Ataque --> DanioUnidad


DanioUnidad <|.. DanioDragon

note left of DanioDragon: Solo pongo danioDragon, pero el danio\nde cualquier unidad implementa esta interfaz

@enduml